# tmux-agent-sidebar

./: AGENTS.md  Cargo.toml  README.md  agent-sidebar.conf  hook.sh  install-wizard.sh  tmux-agent-sidebar.tmux
.github/workflows/: ci.yml  deploy-website.yml  release.yml
docs/: state-management.md
docs/superpowers/plans/: 2026-04-19-mascot-page.md
docs/superpowers/specs/: 2026-04-19-mascot-page-design.md
fixtures/scenarios/common/: _lib.sh
fixtures/scenarios/mascot-idle/: scenario.sh
fixtures/scenarios/mascot-walking/: scenario.sh
hooks/: hooks.json
scripts/: build-assets.sh
src/: activity.rs  app.rs  daemon.rs  desktop_notification.rs  event.rs  group.rs  lib.rs  main.rs  port.rs  process.rs  state.rs  time.rs  tmux.rs  tool_name.rs
src/adapter/: codex.rs  opencode.rs
src/adapter/claude/: mod.rs  (+1 more)
src/app/: input.rs  render.rs  setup.rs  workers.rs
src/cli/: hook.rs  label.rs  mod.rs  plugin_init.rs  plugin_state.rs  toggle.rs
src/event/: adapter.rs  kind.rs
src/llm/: client.rs  config.rs  http.rs  mod.rs  store.rs
src/state/: activity.rs  filter.rs  focus.rs  global.rs  layout.rs  mascot.rs  notices.rs  pane_runtime.rs  pet.rs  popup.rs  refresh.rs  scroll.rs  session.rs  timers.rs
src/tmux/: commands.rs  options.rs  panes.rs  query.rs  types.rs
src/ui/: colors.rs  icons.rs  mascot.rs  mod.rs  panes.rs  text.rs
tests/: bottom_tests.rs  capture_tests.rs  color_tests.rs  panes_tests.rs  plugin_hooks_tests.rs  state_tests.rs  styled_tests.rs  test_helpers.rs  ui_snapshot.rs
website/: astro.config.mjs  package-lock.json  package.json
(+45 files in other folders)
